# Python-Table-Print

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: black.yml  pytest.yml  python-publish.yml
.suggestions/githooks/: pre-push
python_table_print/: __init__.py  example.py  table.py
src/: app.py  example.py
src/python-table-print/: __init__.py  example.py  table.py
src/python_table_print/: __init__.py  cell.py  column.py  example.py  justification.py  row.py  table.py  table_exception.py
tests/: base_test.py  test_table.py
