[project]
name = "python-table-print"
version = "0.4.3"
authors = [
    {"name" = "Centauri_Prime"}
]
description = "Allows for pretty printing and automatic resizing of tables."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools", "isort", "black", "pytest"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.black]
